# invoice-manager

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/database/: CMakeLists.txt
src/database-lib/: CMakeLists.txt  database.c  database.h  sqlite3-wrapper.c  sqlite3-wrapper.h
src/date-lib/: CMakeLists.txt  date.c  date.h
src/extra-fileio/: CMakeLists.txt  extra-fileio.c
src/extra-string/: CMakeLists.txt  extra-string.c  extra-string.h
src/generate-site/: CMakeLists.txt  cli-interface.c  config.h.in  main.c  settings.c  settings.h
src/gnu-scripts/: CMakeLists.txt  invoice-manager
src/hemlock-argparser-lib/: CMakeLists.txt  arguement.c  arguement.h
src/invoice-gen-site/: CMakeLists.txt
src/invoice-update-db/: CMakeLists.txt  database.c  database.h  extra-fileio.c  extra-fileio.h  extra-string.c  extra-string.h  logging.c  logging.h  main.c  parser.c  parser.h
src/invoice-update-db/testenv/: shortlist.txt  test.bat
src/logging/: CMakeLists.txt  logging.h
src/logging-lib/: CMakeLists.txt  logging.c  logging.h
src/myfileio-lib/: CMakeLists.txt  myfileio.c  myfileio.h
src/mystring-lib/: CMakeLists.txt  mystring.c  mystring.h
src/testing/: CMakeLists.txt  listing_main.c  msvc-generic-cast.c
src/testing/malloc_wrapper/: malloc_wrapper.c  malloc_wrapper.h
src/testing/msvc-generic/: msvc-generic.c
src/testing/sqlite_backup/: CMakeLists.txt  backup.c
src/testing/tobeexecutable/: CMakeLists.txt  tobeexecutable.c
src/testing/tobelibrary/: CMakeLists.txt  tobelibrary.c  tobelibrary.h
src/update-database/: CMakeLists.txt  cli-interface.c  cli-interface.h  config.h.in  main.c  parser.c  parser.h  settings.c  settings.h
src/windows-scripts/: CMakeLists.txt  invoice.bat
